# neuromod-llm-poc

./: .gitignore  BIOMIMETIC_ALIGNMENT_FIX.md  COGNITIVE_TASKS_TOKEN_FIX.md  COMPILE_PAPER.md  DIALOGPT_SCANDAL_FIX.md  ENABLE_ADVANCED_STATISTICS.md  ENABLE_ADVANCED_STATISTICS_SUMMARY.md  ENDPOINT_CALCULATION_GUIDE.md  EXPERIMENT_EXECUTION_PLAN.md  HUGGINGFACE_AUTH_QUICKSTART.md  HUGGINGFACE_CREDENTIALS_GUIDE.md  INDUCTION_HEAD_CALIBRATION_FIX.md  INDUCTION_HEAD_DETECTION_FIX.md  INSTALLATION.md  ISOMORPHISM_FIX_COMPLETE.md  LIBRARY_RELEASE_PLAN.md  LIBRARY_REQUIREMENTS_SUMMARY.md  LICENSE  LSD_AND_ISOMORPHISM_FIXES.md  PACK_OPTIMIZER_REFACTOR.md  PILOT_STUDY_PLAN.md  PLACEHOLDER_AUDIT.md  README.md  REPRODUCIBILITY.md  REQUIREMENTS_GUIDE.md  SAFETY_MONITOR_FIX.md  STATISTICAL_THEATER_FIX.md  STATISTICS_WIRING_FIX.md  STEERING_VECTOR_FIX.md  STIMULANT_ATTENTION_FIX.md  STIMULANT_MATH_FIX.md  TODO.md  VERTEX_AI_DEPLOYMENT_GUIDE.md  WEBSITE_SUMMARY.md  alcohol_target.json  enhanced_alcohol_pack.json  mdma_target.json  optimized_mdma_pack.json  paper_outline_neuromodulated_llms_as_drug_analogues.md  pyproject.toml  (+9 more)
analysis/: data_code_release.py  decision_matrix.py  dose_response_stats.py  latent_specter.py  mode_collapse.py  ood_capacity.py  permutation_test.py  plan.yaml  power_analysis.py  power_analysis_report.json  reporting_system.py  rigor_checklist.py  safety_boundary.py  safety_ethics.py  statistical_analysis.py
api/: .dockerignore  Dockerfile  README.md  README_ENHANCED_MODEL_MANAGER.md  deploy.sh  deploy_vertex_ai.sh  example_usage.py  gpu_model_manager.py  harmony.py  image_model.py  local_server.py  main.py  model_manager.py  requirements.txt  runpod_client.py  server.py  test_alternative.py  test_emotion_results.json  test_exact_pattern.py  test_fixed_gpt2.py  test_gpt2.py  test_simple_model.py  test_t5_model.py  vertex_ai_manager.py  web_interface.py
datasets/: steering_prompts.jsonl
demo/: README.md  advanced_chat_demo.py  chat.py  dose_response_runner.py  image_generation_demo.py  optimization_example.py  pack_optimization_demo.py  visualization_demo.py  vitals_monitor.py
deploy/: DEPLOY.md
docs/: 404.html  CNAME  README.md  advanced_usage.md  analysis.md  calibration_under_influence_experiment.md  chat.html  demo.html  deployment_runpod_cloudflare_plan.md  effects.html  index.html  installation.md  lazarus_protocol_experiment.md  lsd_ablation_experiment.md  methodology.md  packs.html  reference-data.js  reproduction_guide.md  sitemap.xml  troubleshooting.md  unprompted_au_plan.md
examples/: 01_quick_start.py
neuromod/: README.md  __init__.py  cli.py  effect_boundaries.py  effects.py  emotion_demo.py  emotion_system.py  jspace.py  jspace_control.py  model_support.py  neuromod_factory.py  neuromod_tool.py  pack_system.py  probe_demo.py  probes.py  steering_generator.py  test_probes.py  visual_effects.py  visual_steering.py
notebooks/: reproduce_paper_colab.ipynb  run_pilot_colab.ipynb
outputs/: Digital-Psychopharmacology.aux  Digital-Psychopharmacology.out  Digital-Psychopharmacology.tex  Report.tex  full_paper.aux  full_paper.out  full_paper.tex  full_paper_final.aux  full_paper_final.out  full_paper_final.tex  full_paper_with_limitations.tex
packs/: README.md  config.json  lsd_ablation_steering_only.json  lsd_ablation_temperature_only.json  none.json  pack.lock.json  placebo.json
reports/: report_20250910_201858.html  report_20250910_202832.html  report_20250910_203645.html  report_20250910_204520.html
scripts/: analyze_endpoints.py  audit_blinding.py  calculate_endpoints.py  calibration_under_influence_experiment.py  expand_steering_prompts.py  export_endpoints_to_ndjson.py  generate_figure_2.py  generate_figure_3.py  generate_figure_5.py  generate_steering_vectors.py  generate_steering_vectors_all_models.py  reproduce.py  run_dose_response_remote.sh  run_lazarus_protocol_experiment.py  run_lsd_ablation_experiment.py  run_ood_capacity_remote.sh  run_pilot.py  run_remote_study.py  run_safety_boundary_remote.sh  test_advanced_stats.py  test_cli_args.py  validate_benchmarks.py  validate_experimental_design.py  validate_models.py  validate_packs.py  validate_pdq_s_metric.py  validate_statistics.py
tests/: README.md  __init__.py  run_comprehensive_tests.py  run_tests.py  run_tests_wrapper.py  test.py  test_api_servers.py  test_caa_steering.py  test_container_simulation.py  test_core.py  test_decision_matrix.py  test_dose_response_stats.py  test_effect_fixes.py  test_effects.py  test_emotion_system.py  test_full_stack.py  test_harmony_channels.py  test_image_generation.py  test_integration.py  test_jspace.py  test_jspace_control.py  test_jspace_effects.py  test_jspace_telemetry.py  test_ood_capacity.py  test_pack_optimization.py  test_pharmacodynamics.py  test_probe_integration.py  test_probes.py  (+11 more)
(+232 files in other folders)
