[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuromod-llm"
version = "0.1.0"
description = "Neuromodulation effects for large language models"
authors = [
    {name = "Neuromod Research Team", email = "research@neuromod.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML/AI dependencies
    "torch>=2.0.0",
    "transformers>=4.42.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.41.0",
    
    # Statistical analysis
    "numpy>=1.25.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "pandas>=1.2.0",
    "statsmodels>=0.14.0",
    
    # Bayesian analysis (optional)
    "pymc>=5.0.0; extra == 'bayesian'",
    "arviz>=0.15.0; extra == 'bayesian'",
    
    # Visualization
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    
    # Web interface
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.0",
    
    # Utilities
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

[project.optional-dependencies]
bayesian = [
    "pymc>=5.0.0",
    "arviz>=0.15.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/neuromod-ai/neuromod-llm"
Documentation = "https://neuromod-llm.readthedocs.io"
Repository = "https://github.com/neuromod-ai/neuromod-llm.git"
Issues = "https://github.com/neuromod-ai/neuromod-llm/issues"

[project.scripts]
neuromod = "neuromod.cli:main"
neuromod-test = "neuromod.testing.test_runner:main"
neuromod-power = "analysis.power_analysis:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuromod*", "analysis*", "api*", "demo*", "tests*"]

[tool.setuptools.package-data]
neuromod = ["packs/*.json", "testing/*.md"]
analysis = ["*.yaml", "*.yml"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["neuromod", "analysis", "api", "demo", "tests"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "transformers.*",
    "accelerate.*",
    "bitsandbytes.*",
    "pymc.*",
    "arviz.*",
    "plotly.*",
    "fastapi.*",
    "uvicorn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "core: marks tests as core functionality tests",
    "api: marks tests as API tests",
    "scientific: marks tests as scientific framework tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["neuromod", "analysis", "api", "demo"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
